<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.EditPersonalIntroductionActivity"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:fitsSystemWindows="true"
            android:background="@color/colorAccent"
            >

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                android:fitsSystemWindows="true"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:layout_collapseMode="pin"
                    android:paddingTop="20dp"
                    android:fitsSystemWindows="true"
                    android:clickable="true"
                    android:foreground="?android:selectableItemBackground"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/icon_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/default_photo"
                    android:layout_centerInParent="true" />

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:padding="30dp"
                    android:src="@drawable/camera"
                    android:background="@drawable/camera_circle_bg"/>

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textColor="@color/tabSelectedTextColor"
                    android:layout_marginTop="140dp"/>

                <TextView
                    android:id="@+id/introduction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/tabSelectedTextColor"
                    android:layout_marginTop="180dp"/>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="13dp">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:theme="@style/MyEditText"/>

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="1/12"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduction"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="13dp">

            <EditText
                android:id="@+id/edit_introduction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_introduction"
                android:theme="@style/MyEditText"/>

            <TextView
                android:id="@+id/text_introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="1/60"/>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginTop="190dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@color/cardview_shadow_start_color" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/photo_layout"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:layout_marginTop="190dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/camera"
            android:background="@drawable/camera_circle_bg"
            android:padding="12dp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/tabSelectedTextColor"
            android:textSize="15sp"/>
    </FrameLayout>

</FrameLayout>